style: fix all posts style